tests/roles/should_fail/T9204a.hs
{-# LANGUAGE Haskell2010 #-}
module T9204a where
import {-# SOURCE #-} T9204
